# spec_generator

./: .env.example  .env.example.prod  .gitignore  CLAUDE.md  GEMINI.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prompt.md  start.sh  stop.sh
.github/workflows/: auto-merge.yml  ci.yml
.specify/memory/: constitution.md
backend/: Dockerfile  pyproject.toml  ruff.toml
backend/src/: main.py
backend/src/api/: endpoints.py
backend/src/core/: prompt_loader.py
backend/src/models/: schemas.py
backend/src/services/: llm_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_clarification.py  test_generate.py
backend/tests/unit/: test_endpoints.py  test_llm_service.py  test_prompt_loader.py
frontend/: .env.example  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/__tests__/: api.test.ts  export-copy.test.ts  useStreamParser.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: chat-input.tsx  chat-message.tsx  image-preview.tsx  image-upload.tsx  (+2 more)
prompts/: prompt-chat.md  prompt-edit.md  prompt-suggestions.md  prompt.md
scripts/: dev.sh
specs/001-agent-image-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-chat-context/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-export-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-spec-gen-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+27 files in other folders)
